--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
+    <link rel="icon" 
+  type="image/png" 
+  href="https://upload.wikimedia.org/wikipedia/commons/4/4e/Sir_Tim_Berners-Lee_%28cropped%29.jpg"> 
     <title> Sir Tim Berners-Lee </title>
     <link rel="stylesheet" href="style.css">
 </head>
